# stk-vis

./: .gitignore  create-packages.bash  justfile  main.js  package.json  packages.dhall  prod.package.json  readme.rst  spago.dhall  tsconfig.json  webpack.config.js  webpack.prod.js
backend/: Cargo.toml
backend/src/: main.rs
electron/: app.js  index.html  main.js  package-lock.json  package.json  preload.js
elm/: elm.json  index.html  package-lock.json  package.json
elm/src/: Main.elm
make_test_database/: pyproject.toml
make_test_database/src/make_test_database/: script.py
make_test_database/src/make_test_databse/: script.py
old/: .eslintrc.js  LICENSE  main.js  prod.main.js  readme.rst  spago.dhall  tsconfig.json
old-src/maybe/: index.tsx
old-src/stkVis/: App.tsx
old/src/: PageKind.purs
old/utilities/: make_example_database.py  make_test_database.py
src/: App.tsx  Config.purs  DispatchAction.purs  SelectingCollection.purs  Snackbar.purs  SortType.purs  index.tsx  template.html  types.d.ts
src/@types/: Config.d.ts  Data.Map.d.ts  Molecule.d.ts  MoleculeBrowser.Action.d.ts  MoleculeBrowser.Initialize.UnsortedAll.d.ts  MoleculeBrowser.Initialize.UnsortedBuildingBlocks.d.ts  MoleculeBrowser.Initialize.UnsortedConstructedMolecules.d.ts  MoleculeBrowser.MoleculeBrowser.d.ts  MoleculeBrowser.UpdateMoleculePage.PageData.d.ts  MoleculeBrowser.UpdateMoleculePage.UpdateMoleculePage.d.ts  (+53 more)
test/: make_test_database.py  stk-vis-mongo-config.json
typescript/: package-lock.json  package.json  tsconfig.json
utilities/: make_test_database.py
(+1054 files in other folders)
